@@ -87,6 +87,7 @@ import org.academy.internal.client.render.fluid.ImagPhaseFluidRenderer;
 import org.academy.internal.client.render.vfx.*;
 import org.academy.internal.client.renderer.blockentity.WindGenPillarRenderer;
 import org.academy.internal.client.renderer.effect.LightShieldEffectRenderer;
+import org.academy.internal.client.renderer.entity.layers.CloudroomLayer;
 import org.academy.internal.client.renderer.entity.layers.SkillEffectsLayer;
 import org.academy.internal.client.renderer.entity.layers.quantum.QuantumInterferenceLayer;
 import org.academy.internal.client.renderer.special.*;
@@ -96,6 +97,7 @@ import org.academy.internal.common.ability.ProficiencyPolicy;
 import org.academy.internal.common.ability.teleport.InstantTeleportSyncPacket;
 import org.academy.internal.common.attachment.AttachmentTypes;
 import org.academy.internal.common.core.particles.ParticleTypes;
+import org.academy.internal.common.network.SkillVfxPacket;
 import org.academy.internal.common.network.SpawnVfxGraphPacket;
 import org.academy.internal.common.network.TemporalImmunitySyncPacket;
 import org.academy.internal.common.world.damagesource.PvpSetting;
@@ -104,6 +106,7 @@ import org.academy.internal.common.world.level.block.Blocks;
 import org.academy.internal.common.world.level.block.MultiBlock;
 import org.academy.internal.common.world.level.material.Fluids;
 import org.joml.Vector3f;
+import org.jspecify.annotations.Nullable;
 
 import java.io.File;
 import java.io.IOException;
@@ -143,8 +146,8 @@ public final class AcademyCraftClient {
         InstantTeleportSyncPacket.initClient();
         TemporalImmunitySyncPacket.initClient();
         SpawnVfxGraphPacket.initClient();
-        org.academy.internal.common.network.SkillVfxPacket.initClient();
-        org.academy.internal.client.render.vfx.ShockwaveVfx.register();
+        SkillVfxPacket.initClient();
+        ShockwaveVfx.register();
         ProficiencyPolicy.initClient();
         PvpSetting.initClient();
         ProficiencySkillSettingsClient.init();
@@ -152,7 +155,7 @@ public final class AcademyCraftClient {
         ImagPhaseDowsingRodClient.init();
         BeamVfxClient.register();
         SmokeVfxClient.register();
-        org.academy.internal.client.render.vfx.DarkmatterSlashVfx.register();
+        DarkmatterSlashVfx.register();
         ArcVfxClient.register();
         WingVfxClient.register();
         PlasmaVfxClient.register();
@@ -164,7 +167,6 @@ public final class AcademyCraftClient {
         VfxManager.INSTANCE.init();
         VfxGraphManager.INSTANCE.init();
         if (isUiDebugEnvironment()) {
-            // dev 热重载：监听运行目录下的 vfxgraph 资产（与资源包目录一致）
             var root = Minecraft.getInstance().gameDirectory.toPath().resolve("vfxgraph");
             try {
                 Files.createDirectories(root);
@@ -364,7 +366,7 @@ public final class AcademyCraftClient {
         return 1;
     }
 
-    private static int spawnVfx(String graph, Vector3f position) {
+    private static int spawnVfx(String graph, @Nullable Vector3f position) {
         var mc = Minecraft.getInstance();
         if (mc.level == null) {
             notifyClient("No world loaded.");
@@ -414,8 +416,6 @@ public final class AcademyCraftClient {
                     : summary);
         }
         notifyClient("Dumped " + dumped + " glyph(s) at " + px + "px to " + outputDir + summaries);
-        // Commands run before a world/netcode exists must still be observable:
-        // notifyClient silently drops the message when no player is present.
         AcademyCraft.getLogger().info(
                 "Bitmap glyph dump ({}, {}px):\n{}{}", text, px, outputDir, summaries
         );
@@ -458,8 +458,6 @@ public final class AcademyCraftClient {
         }
 
         notifyClient("Dumped " + dumped.size() + " atlas page(s) to " + outputDir + summary);
-        // Commands runs before a world/netcode exists must still be observable:
-        // notifyClient silently drops the message when no player is present.
         AcademyCraft.getLogger().info("Atlas dump ({}): {}{}", filter, outputDir, summary);
         return 1;
     }
@@ -487,7 +485,7 @@ public final class AcademyCraftClient {
         if (isUiDebugEnvironment()) UiDebugSession.INSTANCE.close();
         ImGuiUtilApi.INSTANCE.close();
         MsdfFontService.INSTANCE.close();
-        
+
         AtlasManager.INSTANCE.closeAll();
         SpacialExcisionVfxClient.close();
         PostEffect.close();
@@ -570,7 +568,7 @@ public final class AcademyCraftClient {
             LivingEntityRenderer<T, S, M> renderer
     ) {
         renderer.addLayer(new QuantumInterferenceLayer<>(renderer));
-        renderer.addLayer(new org.academy.internal.client.renderer.entity.layers.CloudroomLayer<>(renderer));
+        renderer.addLayer(new CloudroomLayer<>(renderer));
     }
 
     @SubscribeEvent
@@ -579,8 +577,8 @@ public final class AcademyCraftClient {
             @Override
             public <T extends Avatar & ClientAvatarEntity> void accept(T avatar, AvatarRenderState renderState) {
                 AbilityDeveloperSleepClient.extract(avatar, renderState);
-                renderState.setRenderData(org.academy.internal.client.renderer.entity.layers.CloudroomLayer.VISIBLE,
-                        org.academy.internal.client.renderer.entity.layers.CloudroomLayer.shouldReveal(avatar));
+                renderState.setRenderData(CloudroomLayer.VISIBLE,
+                        CloudroomLayer.shouldReveal(avatar));
                 renderState.setRenderData(ElectromasterWeaponVfx.ENTITY_ID_CONTEXT, avatar.getId());
                 renderState.setRenderData(
                         ElectromasterWeaponVfx.MAGNETIC_CONTEXT,
@@ -609,8 +607,8 @@ public final class AcademyCraftClient {
                     QuantumInterferenceLayer.CONTEXT_KEY,
                     livingEntity.getExistingDataOrNull(AttachmentTypes.QUANTUM_DATA.get())
             );
-            livingEntityRenderState.setRenderData(org.academy.internal.client.renderer.entity.layers.CloudroomLayer.VISIBLE,
-                    org.academy.internal.client.renderer.entity.layers.CloudroomLayer.shouldReveal(livingEntity));
+            livingEntityRenderState.setRenderData(CloudroomLayer.VISIBLE,
+                    CloudroomLayer.shouldReveal(livingEntity));
         };
     }
 
@@ -629,9 +627,9 @@ public final class AcademyCraftClient {
                     };
                     var color = colors[random.nextInt(colors.length)];
                     particle.setColor(
-                            Math.max(0, Math.min(255, color[0] + random.nextInt(-20, 20))) / 255.0F,
-                            Math.max(0, Math.min(255, color[1] + random.nextInt(-20, 20))) / 255.0F,
-                            Math.max(0, Math.min(255, color[2] + random.nextInt(-20, 20))) / 255.0F
+                            Math.clamp(color[0] + random.nextInt(-20, 20), 0, 255) / 255.0F,
+                            Math.clamp(color[1] + random.nextInt(-20, 20), 0, 255) / 255.0F,
+                            Math.clamp(color[2] + random.nextInt(-20, 20), 0, 255) / 255.0F
                     );
                     return particle;
                 });
@@ -697,9 +695,6 @@ public final class AcademyCraftClient {
                 return HumanoidModel.ArmPose.CROSSBOW_HOLD;
             }
         }, Items.IMAG_PHASE_DOWSING_ROD.get());
-        // The shaped armor remains a fully functional equipment set, but its worn layer is
-        // intentionally invisible. Keep the equipment asset and animated textures available
-        // for item rendering/resource packs while suppressing only the humanoid layer submit.
         event.registerItem(new IClientItemExtensions() {
                                @Override
                                public int getArmorLayerTintColor(
